# Elsweedy-Real_estate_data-

./: .replit  config.py  create_properties_final.py  demo_app.py  demo_config.py  demo_services.py  demo_web_interface.py  full_test_workflow.py  main.py  monitor_messages.py  pyproject.toml  real_config.py  real_estate.db  real_estate_real.db  real_system.py  replit.md  requirements.txt  send_test_messages.py  send_to_telegram.py  setup_secrets.py  simulate_sender_bot.py  test_complete_workflow.py  test_fixed_system.py  test_full_process.py  test_full_system.py  test_notion_fields.py  test_properties.py  test_simple.py  test_system_flow.py  web_interface.py
attached_assets/: Pasted---1753398753095_1753398753102.txt  Pasted---1753411677273_1753411677278.txt  Pasted---1753411861436_1753411861438.txt  Pasted---1753412751335_1753412751340.txt
models/: property.py
processors/: property_processor.py
services/: ai_service.py  notion_service.py  telegram_service.py  zoho_service.py
static/: script.js  style.css
templates/: demo_index.html  index.html  settings.html
utils/: database.py  logger.py
