[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "anthropic>=0.59.0",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "notion-client>=2.4.0",
    "openai>=1.97.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
